<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/mCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgBgPoster"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:alpha="0.4"
                        android:contentDescription="@string/bg_poster"
                        android:fitsSystemWindows="true"
                        android:scaleType="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/movie_alita" />

                    <ImageButton
                        android:id="@+id/btnTrailer"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/watch_thriller"
                        app:layout_constraintBottom_toBottomOf="@id/imgBgPoster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/imgBgPoster"
                        app:srcCompat="@drawable/ic_play" />

                    <ImageView
                        android:id="@+id/imgPoster"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="24dp"
                        android:contentDescription="@string/poster"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:src="@drawable/movie_alita" />

                    <ProgressBar
                        android:id="@+id/progressRating"
                        android:layout_width="68dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:indeterminateOnly="false"
                        android:progressDrawable="@drawable/bg_circle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgBgPoster"
                        tools:progress="0" />


                    <ImageView
                        android:id="@+id/imgRating"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/rating"
                        android:src="@drawable/ic_star"
                        app:layout_constraintBottom_toBottomOf="@id/progressRating"
                        app:layout_constraintEnd_toStartOf="@id/tvRating"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="@id/progressRating"
                        app:layout_constraintTop_toTopOf="@id/progressRating" />

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/imgRating"
                        app:layout_constraintEnd_toEndOf="@id/progressRating"
                        app:layout_constraintStart_toEndOf="@id/imgRating"
                        app:layout_constraintTop_toTopOf="@id/imgRating"
                        tools:text="60" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@id/tvReleaseDate"
                        app:layout_constraintEnd_toStartOf="@id/progressRating"
                        app:layout_constraintStart_toEndOf="@id/imgPoster"
                        app:layout_constraintTop_toBottomOf="@id/imgBgPoster"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="TITLE" />

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingBottom="16dp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/tvTitle"
                        app:layout_constraintStart_toStartOf="@id/tvTitle"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle"
                        tools:text="Release Date" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLabelOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/overview"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mCardView" />

            <View
                android:id="@+id/viewOverview"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="@id/tvLabelOverview"
                app:layout_constraintStart_toStartOf="@id/tvLabelOverview"
                app:layout_constraintTop_toBottomOf="@id/tvLabelOverview" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@id/viewOverview"
                tools:text="@string/sampleDescription" />

            <TextView
                android:id="@+id/tvLabelCrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/crew"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            <View
                android:id="@+id/viewCrew"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="@id/tvLabelCrew"
                app:layout_constraintStart_toStartOf="@id/tvLabelCrew"
                app:layout_constraintTop_toBottomOf="@id/tvLabelCrew" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCrew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/viewCrew"
                tools:itemCount="2"
                tools:listitem="@layout/item_crew" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/mLoading"
        layout="@layout/item_loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>