<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationMovie"
        android:icon="@drawable/ic_movies"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigationTvShow"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_show"/>

    <item android:id="@+id/navigationFavorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/my_favorite"/>

</menu>